Added quotes and newline preservation in posts

--- a/app/assets/stylesheets/aya/global/variables.less
+++ b/app/assets/stylesheets/aya/global/variables.less
@@ -7,6 +7,7 @@
 @main-header: @link;
 @shadow: @bg-darker;
 @anonymous-green: #117743;
+@georgecostanza: #789922;
 
 @default-border-radius: 5px;
 @default-padding: 10px;
