--- a/app/views/thread.scala.html
+++ b/app/views/thread.scala.html
@@ -68,7 +68,7 @@
           }
         }
         <blockquote class="content">
-          @post.content
+          @Html(post.content)
         </blockquote>
       </section>
     </article>
