Added thread excerpts in main board view

--- a/app/assets/stylesheets/aya/global/variables.less
+++ b/app/assets/stylesheets/aya/global/variables.less
@@ -1,6 +1,7 @@
 @bg-lighter: lighten(#E0EFF1, 5%);
 @bg-darker: lighten(#AED0D1, 5%);
 @text: #000030;
+@ligtht-text: #3E658B;
 @text-bg: #FFFFFF;
 @link: #FF9F00;
 @link-hover: lighten(@link, 10%);
