--- a/app/assets/stylesheets/aya/views/board.less
+++ b/app/assets/stylesheets/aya/views/board.less
@@ -20,3 +20,30 @@ h2 {
   margin: @default-padding;
   margin-top: @default-padding*2;
 }
+
+#pagination {
+  display: inline-block;
+  margin: @default-padding;
+  background-color: @text-bg;
+  padding: @default-padding/2 @default-padding;
+  border-radius: @default-border-radius;
+  .outer-glow;
+
+  > #page-list {
+    list-style-type: none;
+    display: inline;
+
+    > .entry {
+      display: inline;
+      margin-left: @default-padding/2;
+
+      &:last-child {
+        margin-right: @default-padding/2;
+      }
+    }
+
+    > .entry.active {
+      font-weight: bold;
+    }
+  }
+}
