--- a/app/assets/stylesheets/aya/views/thread.less
+++ b/app/assets/stylesheets/aya/views/thread.less
@@ -1,5 +1,6 @@
 .thread {
   margin-bottom: @default-padding*2;
+  padding-bottom: @default-padding/2;
   overflow: hidden;
 
   &:not(:last-child) {
