Added truncation of lengthy posts in board view

--- a/app/assets/stylesheets/aya/views/thread.less
+++ b/app/assets/stylesheets/aya/views/thread.less
@@ -113,7 +113,7 @@ img {
   }
 }
 
-.ommited-posts-msg {
+.omitted-posts-msg, .text-too-long-msg {
   color: @ligtht-text;
   margin-bottom: @default-padding/2;
 }
