Added staff panel w/ auth

--- a/app/assets/stylesheets/aya/global/variables.less
+++ b/app/assets/stylesheets/aya/global/variables.less
@@ -1,14 +1,17 @@
 @bg-lighter: lighten(#E0EFF1, 5%);
 @bg-darker: lighten(#AED0D1, 5%);
 @text: #000030;
-@ligtht-text: #3E658B;
+@light-text: #3E658B;
 @text-bg: #FFFFFF;
 @link: #FF9F00;
 @link-hover: lighten(@link, 10%);
 @main-header: @link;
+@error: #CF000F;
 @shadow: @bg-darker;
 @anonymous-green: #117743;
 @georgecostanza: #789922;
 
 @default-border-radius: 5px;
 @default-padding: 10px;
+
+@staff-sidebar-width: 200px;
