--- a/app/assets/stylesheets/aya/master.less
+++ b/app/assets/stylesheets/aya/master.less
@@ -6,6 +6,8 @@
 @import "views/index";
 @import "views/board";
 @import "views/thread";
+@import "views/staff/login";
+@import "views/staff/main";
 
 #post-form-container {
   position: fixed;
