--- a/app/assets/stylesheets/aya/views/board.less
+++ b/app/assets/stylesheets/aya/views/board.less
@@ -1,5 +1,9 @@
-#board > header {
-  text-align: center;
+#board {
+  margin-top: @default-padding*2;
+
+  > header {
+    text-align: center;
+  }
 }
 
 h2 {
