--- a/app/assets/stylesheets/aya/views/thread.less
+++ b/app/assets/stylesheets/aya/views/thread.less
@@ -114,6 +114,6 @@ img {
 }
 
 .omitted-posts-msg, .text-too-long-msg {
-  color: @ligtht-text;
+  color: @light-text;
   margin-bottom: @default-padding/2;
 }
