--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,6 +5,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="@routes.Assets.at("stylesheets/aya.css")">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
   <title>@title | AyaIB</title>
 </head>
 <body>
