--- a/app/assets/stylesheets/aya/views/staff/main.less
+++ b/app/assets/stylesheets/aya/views/staff/main.less
@@ -36,6 +36,7 @@
       > li {
         height: 20px;
       }
+
       .action-name {
         vertical-align: 1px;
       }
@@ -53,5 +54,10 @@
 
 #content {
   overflow: hidden;
-  padding: @default-padding/2 @default-padding;
+  padding: @default-padding/1.5 @default-padding*1.5;
+}
+
+h2 {
+  margin-top: @default-padding/2;
+  margin-bottom: @default-padding*2;
 }
