--- a/app/views/staff/login.scala.html
+++ b/app/views/staff/login.scala.html
@@ -2,7 +2,7 @@
 
 @import helper._
 
-@main("Staff Login") {
+@views.html.main("Staff Login") {
 
   <main id="staff-login">
     @flash.get("error").map { message =>
