--- a/app/assets/stylesheets/aya/views/board.less
+++ b/app/assets/stylesheets/aya/views/board.less
@@ -3,20 +3,20 @@
 
   > header {
     text-align: center;
-  }
-}
 
-h2 {
-  font-size: 28px;
-  color: @main-header;
-  display: inline-block;
-  background-color: @text-bg;
-  border-radius: @default-border-radius;
-  .outer-glow;
+    > h2 {
+      font-size: 28px;
+      color: @main-header;
+      display: inline-block;
+      background-color: @text-bg;
+      border-radius: @default-border-radius;
+      .outer-glow;
 
-  > a {
-    display: inline-block;
-    margin: @default-padding*1.4 @default-padding*1.2;
+      > a {
+        display: inline-block;
+        margin: @default-padding*1.4 @default-padding*1.2;
+      }
+    }
   }
 }
 
