--- a/app/views/staff/main.scala.html
+++ b/app/views/staff/main.scala.html
@@ -1,4 +1,4 @@
-@()(content: play.twirl.api.Html)
+@(actionName: String)(content: play.twirl.api.Html)
 
 @views.html.main("Staff Panel") {
 
@@ -13,15 +13,16 @@
       <header>Boards</header>
       <ul>
         <li>
-          <a href=""><i class="fa fa-book"></i> <span class="action-name">Manage</span></a>
+          <a href="@routes.StaffPanelController.manageBoards"><i class="fa fa-book"></i> <span class="action-name">Manage</span></a>
         </li>
         <li>
-          <a href=""><i class="fa fa-plus"></i> <span class="action-name">Add new</span></a>
+          <a href="@routes.StaffPanelController.newBoardForm"><i class="fa fa-plus"></i> <span class="action-name">Add new</span></a>
         </li>
       </ul>
     </section>
   </aside>
   <main id="content">
+    <h2>@actionName</h2>
     @content
   </main>
 
