--- a/public/stylesheets/aya.css
+++ b/public/stylesheets/aya.css
@@ -1,3 +1,25 @@
+/*
+ * Copyright (C) 2014 AyaIB Developers (http://github.com/fauu/AyaIB)
+ *
+ * This software is licensed under the GNU General Public License
+ * (version 3 or later). See the COPYING file in this distribution.
+ *
+ * You should have received a copy of the GNU Library General Public License
+ * along with this software. If not, see <http://www.gnu.org/licenses/>.
+ *
+ * Authored by: Piotr Grabowski <fau999@gmail.com>
+ */
+/*
+ * Copyright (C) 2014 AyaIB Developers (http://github.com/fauu/AyaIB)
+ *
+ * This software is licensed under the GNU General Public License
+ * (version 3 or later). See the COPYING file in this distribution.
+ *
+ * You should have received a copy of the GNU Library General Public License
+ * along with this software. If not, see <http://www.gnu.org/licenses/>.
+ *
+ * Authored by: Piotr Grabowski <fau999@gmail.com>
+ */
 html,
 body {
   border: 0;
@@ -108,6 +130,39 @@ a img {
 :focus {
   outline: 0;
 }
+/*
+ * Copyright (C) 2014 AyaIB Developers (http://github.com/fauu/AyaIB)
+ *
+ * This software is licensed under the GNU General Public License
+ * (version 3 or later). See the COPYING file in this distribution.
+ *
+ * You should have received a copy of the GNU Library General Public License
+ * along with this software. If not, see <http://www.gnu.org/licenses/>.
+ *
+ * Authored by: Piotr Grabowski <fau999@gmail.com>
+ */
+/*
+ * Copyright (C) 2014 AyaIB Developers (http://github.com/fauu/AyaIB)
+ *
+ * This software is licensed under the GNU General Public License
+ * (version 3 or later). See the COPYING file in this distribution.
+ *
+ * You should have received a copy of the GNU Library General Public License
+ * along with this software. If not, see <http://www.gnu.org/licenses/>.
+ *
+ * Authored by: Piotr Grabowski <fau999@gmail.com>
+ */
+/*
+ * Copyright (C) 2014 AyaIB Developers (http://github.com/fauu/AyaIB)
+ *
+ * This software is licensed under the GNU General Public License
+ * (version 3 or later). See the COPYING file in this distribution.
+ *
+ * You should have received a copy of the GNU Library General Public License
+ * along with this software. If not, see <http://www.gnu.org/licenses/>.
+ *
+ * Authored by: Piotr Grabowski <fau999@gmail.com>
+ */
 html {
   min-height: 100%;
 }
@@ -174,6 +229,17 @@ a:hover {
   padding: 5px 3px;
   font-weight: bold;
 }
+/*
+ * Copyright (C) 2014 AyaIB Developers (http://github.com/fauu/AyaIB)
+ *
+ * This software is licensed under the GNU General Public License
+ * (version 3 or later). See the COPYING file in this distribution.
+ *
+ * You should have received a copy of the GNU Library General Public License
+ * along with this software. If not, see <http://www.gnu.org/licenses/>.
+ *
+ * Authored by: Piotr Grabowski <fau999@gmail.com>
+ */
 #board-list-container {
   text-align: center;
   margin: 150px auto;
@@ -189,6 +255,17 @@ a:hover {
   font-size: 20px;
   font-weight: bold;
 }
+/*
+ * Copyright (C) 2014 AyaIB Developers (http://github.com/fauu/AyaIB)
+ *
+ * This software is licensed under the GNU General Public License
+ * (version 3 or later). See the COPYING file in this distribution.
+ *
+ * You should have received a copy of the GNU Library General Public License
+ * along with this software. If not, see <http://www.gnu.org/licenses/>.
+ *
+ * Authored by: Piotr Grabowski <fau999@gmail.com>
+ */
 #board {
   margin-top: 20px;
 }
@@ -233,6 +310,17 @@ a:hover {
 #pagination > #page-list > .entry.active {
   font-weight: bold;
 }
+/*
+ * Copyright (C) 2014 AyaIB Developers (http://github.com/fauu/AyaIB)
+ *
+ * This software is licensed under the GNU General Public License
+ * (version 3 or later). See the COPYING file in this distribution.
+ *
+ * You should have received a copy of the GNU Library General Public License
+ * along with this software. If not, see <http://www.gnu.org/licenses/>.
+ *
+ * Authored by: Piotr Grabowski <fau999@gmail.com>
+ */
 .thread {
   margin-bottom: 20px;
   padding-bottom: 5px;
@@ -327,6 +415,17 @@ img {
   color: #3e658b;
   margin-bottom: 5px;
 }
+/*
+ * Copyright (C) 2014 AyaIB Developers (http://github.com/fauu/AyaIB)
+ *
+ * This software is licensed under the GNU General Public License
+ * (version 3 or later). See the COPYING file in this distribution.
+ *
+ * You should have received a copy of the GNU Library General Public License
+ * along with this software. If not, see <http://www.gnu.org/licenses/>.
+ *
+ * Authored by: Piotr Grabowski <fau999@gmail.com>
+ */
 #staff-login {
   margin: 100px auto;
   width: 300px;
@@ -359,6 +458,17 @@ img {
   margin-top: 5px;
   padding: 5px 2.5px;
 }
+/*
+ * Copyright (C) 2014 AyaIB Developers (http://github.com/fauu/AyaIB)
+ *
+ * This software is licensed under the GNU General Public License
+ * (version 3 or later). See the COPYING file in this distribution.
+ *
+ * You should have received a copy of the GNU Library General Public License
+ * along with this software. If not, see <http://www.gnu.org/licenses/>.
+ *
+ * Authored by: Piotr Grabowski <fau999@gmail.com>
+ */
 #sidebar {
   float: left;
   width: 200px;
@@ -406,6 +516,17 @@ h2 {
   margin-top: 5px;
   margin-bottom: 20px;
 }
+/*
+ * Copyright (C) 2014 AyaIB Developers (http://github.com/fauu/AyaIB)
+ *
+ * This software is licensed under the GNU General Public License
+ * (version 3 or later). See the COPYING file in this distribution.
+ *
+ * You should have received a copy of the GNU Library General Public License
+ * along with this software. If not, see <http://www.gnu.org/licenses/>.
+ *
+ * Authored by: Piotr Grabowski <fau999@gmail.com>
+ */
 #board-management-table {
   width: 400px;
   background-color: #ffffff;
@@ -432,6 +553,17 @@ h2 {
   width: 280px;
   font-weight: bold;
 }
+/*
+ * Copyright (C) 2014 AyaIB Developers (http://github.com/fauu/AyaIB)
+ *
+ * This software is licensed under the GNU General Public License
+ * (version 3 or later). See the COPYING file in this distribution.
+ *
+ * You should have received a copy of the GNU Library General Public License
+ * along with this software. If not, see <http://www.gnu.org/licenses/>.
+ *
+ * Authored by: Piotr Grabowski <fau999@gmail.com>
+ */
 #new-board-form {
   padding: 10px;
   background-color: #ffffff;
